--- a/BlazorEcommerce/Server/appsettings.json
+++ b/BlazorEcommerce/Server/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=.;database=blazorecommerce;trusted_connection=true"
   },
+  "AppSettings": {
+    "Token":  "my to secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
